# MappyZ

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  MappyZ.code-workspace  README.md  todo.md  todo_ui.md
docs/: blueprint.md
source/App/: ApplicationBootstrap.cpp  ApplicationBootstrap.h  Main.cpp
source/Backends/Input/: FakeInputBackend.cpp  FakeInputBackend.h  InputBackend.h  SdlInputBackend.cpp  SdlInputBackend.h  SdlInputHelpers.h
source/Backends/Output/: NullOutputBackend.cpp  NullOutputBackend.h  OutputBackend.h  WindowsSendInputBackend.cpp  WindowsSendInputBackend.h  WindowsSendInputHelpers.h
source/Core/: Action.h  ControlId.h  DeviceId.h  InputEvent.h  MappingEngine.cpp  MappingEngine.h  MappingProfile.h  MappingRule.h  ProjectCore.h
source/Runtime/: ActionDispatcher.cpp  ActionDispatcher.h  BackendEventQueue.cpp  BackendEventQueue.h  DeviceManager.cpp  DeviceManager.h  InputRuntime.cpp  InputRuntime.h  MappingSession.cpp  MappingSession.h  ProfileManager.cpp  ProfileManager.h  RuntimeEventPump.cpp  RuntimeEventPump.h  RuntimeHost.cpp  RuntimeHost.h  StickDirectionSynthesizer.cpp  StickDirectionSynthesizer.h
source/UI/Bridge/: ActionCatalogModel.cpp  ActionCatalogModel.h  AppController.cpp  AppController.h  DeviceModel.cpp  DeviceModel.h  InputCaptureModel.cpp  InputCaptureModel.h  InputStateModel.cpp  InputStateModel.h  LogModel.cpp  LogModel.h  MappingRuleModel.cpp  MappingRuleModel.h
tests/App/: ApplicationBootstrapTests.cpp
tests/Backends/Input/: FakeInputBackendTests.cpp  SdlInputBackendTests.cpp  SdlInputHelperTests.cpp
tests/Backends/Output/: NullOutputBackendTests.cpp  WindowsSendInputBackendTests.cpp  WindowsSendInputHelperTests.cpp
tests/Core/: CoreTypesTests.cpp  MappingEngineTests.cpp  MappingProfileTests.cpp
tests/Runtime/: ActionDispatcherTests.cpp  BackendEventQueueTests.cpp  DeviceManagerTests.cpp  InputRuntimeTests.cpp  MappingSessionTests.cpp  ProfileManagerTests.cpp  RuntimeEventPumpTests.cpp  RuntimeHostTests.cpp  StickDirectionSynthesizerTests.cpp
tests/UI/: QmlSmokeTests.cpp
tests/UI/Bridge/: ActionCatalogModelTests.cpp  AppControllerTests.cpp  DeviceModelTests.cpp  InputCaptureModelTests.cpp  InputStateModelTests.cpp  LogModelTests.cpp  Main.cpp  MappingRuleModelTests.cpp
ui/: ActionButton.qml  BindingEditor.qml  DInputPicker.qml  DevicesPanel.qml  EventLogPanel.qml  GamepadView.qml  InlineMessage.qml  InputControlState.qml  KeyboardPicker.qml  Main.qml  MappingPickerDialog.qml  MousePicker.qml  PickerKey.qml  PickerTabs.qml  StatusBar.qml  Theme.qml  TopBar.qml  ValueText.qml
ui/common/: FieldLabel.qml  Panel.qml  Tag.qml
ui/gamepad/: ControlDot.qml  EditableGamepadMappingView.qml  GamepadGlyph.qml  GamepadView.qml  MappingGroupCard.qml
ui/panels/: BindingEditor.qml  StatusBar.qml  TopBar.qml
ui/picker/: DInputPicker.qml  KeyboardPicker.qml  MappingPickerDialog.qml  MousePicker.qml  PickerKey.qml
